--- a/style.css
+++ b/style.css
@@ -126,7 +126,7 @@ header{
 .container-content{
     width: 1200px;
     margin: auto;
-    margin-top: 40px;
+    margin-top: 90px;
     display: flex;
     justify-content: center;
 }
@@ -195,4 +195,28 @@ article img{
 }
 .container-aside aside button:hover{
     opacity: 0.9;
+}
+.container-footer{
+    width: 100%;
+    padding: 40px 0;
+    margin-top: 80px;
+
+}
+.container-footer footer{
+    max-width: 1200px;
+    margin: auto;
+
+}
+.container-footer footer hr{
+    margin-top: 20px;
+    border: none;
+    height: 2px;
+    background: #a8a8a8;
+    
+}
+.container-footer h4{
+    text-align: center;
+    margin-top: 20px;
+    color: #a2a2a2;
+    font-weight: 500px;
 }
