--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ header{
 }
 
 .logo h1 b{
-    color: #FFC0CB;
+    color: #f84b6a;
 }
 .menu{
     height: 80px;
@@ -114,11 +114,11 @@ header{
 .container-cover-info h1{
     font-size: 60px;
     font-weight: 500px;
-    color: #fff;
+    color: #000000;
     margin-bottom: 20px;
 }
 .container-cover-info p{
-    color: #fff;
+    color: #000000;
     font-size: 20px;
     font-weight: 300px;
 }
@@ -208,15 +208,26 @@ article img{
 
 }
 .container-footer footer hr{
-    margin-top: 20px;
+    margin-top: 100px;
     border: none;
     height: 2px;
-    background: #a8a8a8;
+    background: #737171;
     
 }
 .container-footer h4{
     text-align: center;
     margin-top: 20px;
-    color: #a2a2a2;
+    color: #737171;
     font-weight: 500px;
+}
+.carousel-inner{
+    width:100%;
+    height: 50vh;
+    
+   
+}
+.carousel-inner img{
+    flex: 0 0 100%;
+    white-space: 50%;
+    object-fit: cover;
 }
